--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
       - { label: 'Featured Image', name: 'featuredimage', widget: image }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Tags', name: 'tags', widget: 'list' }
-      - { label: 'Script', name: 'script', widget: 'text' }
+      - { label: 'Script', name: 'script', widget: 'text', required: false }
 
   - name: 'history'
     label: 'History'
